--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,3 +59,8 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+/* Tailwind directives */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
