--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,10 @@
     --viewport-sm: 926px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
@@ -371,4 +375,3 @@ a {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
-
