--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,6 +68,52 @@ a {
     color: inherit;
 }
 
+.blueLink {
+    color: rgb(var(--color-blue-primary));
+    position: relative;
+}
+
+.blueLink::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    bottom: -2px;
+    left: 0;
+    background-color: rgb(var(--color-blue-primary));
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.blueLink:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.purpleLink {
+    color: rgb(var(--color-purple-primary));
+    position: relative;
+}
+
+.purpleLink::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    bottom: -2px;
+    left: 0;
+    background-color: rgb(var(--color-purple-primary));
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.purpleLink:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
 .container {
     width: 100%;
     padding: 0 20%;
