--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,7 @@
     --color-orange-tertiary: 255, 215, 132;
     --color-purple-primary: 201, 51, 231;
     --color-purple-light: 250, 235, 253;
+    --color-footer: 255, 216, 132;
 
     --color-danger: 255, 59, 48;
     --color-warning: 255, 204, 0;
