solve conflicts footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -120,6 +120,11 @@ a {
     padding: 0 20%;
 }
 
+#footer_bot{
+    position: relative;
+    bottom: 0;
+}
+
 /* Tailwind */
 /* -------------------------------------------------------------------------- */
 /* LAYOUTS                                                                    */
