--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,12 +68,32 @@ a {
     color: inherit;
 }
 
+h1{
+    font-family: var(--font-title);
+    font-size: 1.75em;
+    font-weight: 600;
+}
+
+h2{
+    font-family: var(--font-text);
+    font-size: 1.25em;
+    font-weight: bold;
+}
+
+h3{
+    font-family: var(--font-text);
+    font-size: 1em;
+    font-weight: 500;
+}
+
+
+
+
 .container {
     width: 100%;
     padding: 0 20%;
 }
 
-/* Tailwind */
 /* -------------------------------------------------------------------------- */
 /* LAYOUTS                                                                    */
 /* -------------------------------------------------------------------------- */
