--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,6 +142,12 @@ h3{
     padding: 0 20%;
 }
 
+#containFoot{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
 /* -------------------------------------------------------------------------- */
 /* LAYOUTS                                                                    */
 /* -------------------------------------------------------------------------- */
