--- a/public/css/form/option.css
+++ b/public/css/form/option.css
@@ -1,7 +1,6 @@
 
 div[slot="options"] > div {
-    padding: .8rem 1.5rem;
-    padding-left: .5rem;
+    padding: .8rem 1.5rem .8rem .5rem;
     display: flex;
     align-items: center;
     gap: .5rem;
