--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,61 +1,20 @@
+@import "variables.css";
 @import "reset.css";
 @import "navbar.css";
 @import "footer.css";
+@import "loader.css";
+
+@import "form/form.css";
+@import "form/button.css";
+@import "form/option.css";
+@import "form/checkbox.css";
 
 /* Import fonts */
 @import "fonts/satoshi.css";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-@import url("form/checkBox.css");
 
-@import "form/button.css";
-@import "form.css";
-@import "loader.css";
-
-/* Variables */
-:root {
-    --color-blue-primary: 0, 87, 255;
-    --color-blue-secondary: 0, 162, 255;
-    --color-blue-tertiary: 0, 212, 249;
-    --color-blue-light: 230, 239, 255;
-    --color-orange-primary: 255, 168, 0;
-    --color-orange-secondary: 255, 193, 78;
-    --color-orange-tertiary: 255, 215, 132;
-    --color-purple-primary: 201, 51, 231;
-    --color-purple-light: 250, 235, 253;
-    --color-footer: 255, 216, 132;
-
-    --color-danger: 255, 59, 48;
-    --color-warning: 255, 204, 0;
-    --color-success: 52, 199, 89;
-
-    --color-white: 255, 255, 255;
-    --color-gray-1: 225, 225, 225;
-    --color-gray-2: 187, 187, 187;
-    --color-gray-3: 131, 131, 131;
-    --color-gray-4: 82, 82, 82;
-    --color-black: 31, 31, 31;
-
-    --font-title: 'Satoshi', sans-serif;
-    --font-text: 'Lato', sans-serif;
-    --font-logo: 'Agbalumo', serif;
-
-    /* Type scale, u for up, d for down  */
-    --typescale-u6: 3.000rem;
-    --typescale-u5: 2.500rem;
-    --typescale-u4: 2.062rem;
-    --typescale-u3: 1.750rem;
-    --typescale-u2: 1.438rem;
-    --typescale-u1: 1.188rem;
-    --typescale-base: 1rem;
-    --typescale-d1: 0.812rem;
-    --typescale-d2: 0.688rem;
-
-    --radius-rounded: 100rem;
-    --radius-small: 5px;
-
-    /* Viewports */
-    --viewport-lg: 1440px;
-    --viewport-sm: 926px;
+* {
+    outline: none;
 }
 
 html {
@@ -76,74 +35,22 @@ a {
     color: inherit;
 }
 
-h1{
+.heading-1 {
     font-family: var(--font-title);
     font-size: 1.75em;
     font-weight: 600;
 }
 
-h2{
+.heading-2 {
     font-family: var(--font-text);
     font-size: 1.25em;
     font-weight: bold;
 }
 
-h3{
+.heading-3 {
     font-family: var(--font-text);
     font-size: 1em;
     font-weight: 500;
-}
-
-
-.blueLink {
-    color: rgb(var(--color-blue-primary));
-    position: relative;
-}
-
-.blueLink::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    bottom: -2px;
-    left: 0;
-    background-color: rgb(var(--color-blue-primary));
-    transform: scaleX(0);
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-.blueLink:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-.purpleLink {
-    color: rgb(var(--color-purple-primary));
-    position: relative;
-}
-
-.purpleLink::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    bottom: -2px;
-    left: 0;
-    background-color: rgb(var(--color-purple-primary));
-    transform: scaleX(0);
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-.purpleLink:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-.container {
-    width: 100%;
-    padding: 0 20%;
 }
 
 .hidden {
@@ -159,304 +66,25 @@ h3{
     bottom: 0;
 }
 
-/* -------------------------------------------------------------------------- */
-/* LAYOUTS                                                                    */
-/* -------------------------------------------------------------------------- */
-
-/* FLEX */
-
-.flex {
-    display: flex;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-.items-center {
-    align-items: center;
-}
-
-.justify-center {
-    justify-content: center;
-}
-
-.justify-between {
-    justify-content: space-between;
-}
-
-.gap-1 {
-    gap: 0.25rem;
-}
-
-.gap-2 {
-    gap: 0.5rem;
-}
-
-.gap-3 {
-    gap: 0.75rem;
-}
-
-.gap-4 {
-    gap: 1rem;
-}
-
-.gap-5 {
-    gap: 1.25rem;
-}
-
-.gap-6 {
-    gap: 1.5rem;
-}
-
-.gap-8 {
-    gap: 2rem;
-}
-
-.gap-10 {
-    gap: 2.5rem;
-}
-
-.gap-12 {
-    gap: 3rem;
-}
-
-/* GRID */
-
-.grid {
-    display: grid;
-}
-
-.grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-row-1 {
-    grid-template-rows: repeat(1, minmax(0, 1fr));
-}
-
-.grid-row-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
-.grid-row-3 {
-    grid-template-rows: repeat(3, minmax(0, 1fr));
-}
-
-.grid-row-4 {
-    grid-template-rows: repeat(4, minmax(0, 1fr));
-}
-
-.place-items-center {
-    place-items: center;
-}
-
-
-/* -------------------------------------------------------------------------- */
-/* SPACING                                                                    */
-/* -------------------------------------------------------------------------- */
-
-/* PADDING */
-
-.p-1 {
-    padding: 0.25rem;
-}
-
-.p-2 {
-    padding: 0.5rem;
-}
-
-.p-3 {
-    padding: 0.75rem;
-}
-
-.p-4 {
-    padding: 1rem;
-}
-
-.p-5 {
-    padding: 1.25rem;
-}
-
-.p-6 {
-    padding: 1.5rem;
-}
-
-.p-8 {
-    padding: 2rem;
-}
-
-.p-10 {
-    padding: 2.5rem;
-}
-
-.px-1 {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-}
-
-.px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-}
-
-.px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-}
-
-.px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-}
-
-.px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-}
-
-.py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
-
-.py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-}
-
-.py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-}
-
-.py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-
-.py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-}
-
-.py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-}
-
-.py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
-/* MARGIN */
-
-.m-1 {
-    margin: 0.25rem;
+/* Container */
+.main-container {
+    width: 100%;
+    display: block;
+    position: relative;
+    padding: 2rem 20%;
 }
 
-.m-2 {
-    margin: 0.5rem;
+@media only screen and (min-width: var(--viewport-sm)) {
+    .main-container {
+        padding: 0 20px;
+    }
 }
 
-.m-3 {
-    margin: 0.75rem;
+@media only screen and (min-width: var(--viewport-lg)) {
+    .main-container {
+        padding: 0 18%;
+    }
 }
 
-.m-4 {
-    margin: 1rem;
-}
-
-.m-5 {
-    margin: 1.25rem;
-}
-
-.m-6 {
-    margin: 1.5rem;
-}
-
-.m-8 {
-    margin: 2rem;
-}
-
-.m-10 {
-    margin: 2.5rem;
-}
-
-.mx-1 {
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
-}
-
-.mx-2 {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-}
-
-.mx-3 {
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-}
-
-.mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.mx-5 {
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
-}
-
-.mx-6 {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-}
-
-.my-1 {
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-}
-
-.my-2 {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-}
-
-.my-4 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-.my-5 {
-    margin-top: 1.25rem;
-    margin-bottom: 1.25rem;
-}
-
-.my-6 {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-}
+@tailwind components;
+@tailwind utilities;
