--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
 @import "navbar.css";
 @import "footer.css";
 @import "loader.css";
+@import "login.css";
 
 @import "form/form.css";
 @import "form/button.css";
