--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,13 +1,14 @@
 footer {
     width: 100%;
-    height: 300px;
+    padding: 1rem 20% 4rem;
+
     display: flex;
     flex-direction: column;
-    background-color: rgb(var(--color-footer),0.2);
-    padding: 25px 25%;
     justify-content: flex-start;
     align-items: center;
-    gap: 10px;
+    gap: 2rem;
+
+    background-color: rgb(var(--color-footer),0.2);
     font-family: var(--font-text);
     font-size: var(--typescale-d1);
     color: rgb(var(--color-gray-4));
@@ -30,7 +31,8 @@ footer p {
 
 #parts a {
     text-decoration: none;
-    color : rgb(var(--color-black))
+    color : rgb(var(--color-black));
+    margin-bottom: .2rem;
 }
 
 #about, #explore, #solutions {
