--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -4,29 +4,31 @@
 }
 
 .navbar {
+    position: relative;
+    top: 0;
+    z-index: 1001;
+
+    background-color: white;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 25px;
-    z-index: 1001;
-    position: relative;
-    background-color: white;
-    top: 0;
 }
 
-#nav-icon3 {
+.navbar .nav-burger {
     width: 35px;
     height: 30px;
     position: relative;
     margin: 0;
+    z-index: 1002;
+
     transform: rotate(0deg);
     transition: .5s ease-in-out;
     cursor: pointer;
-    z-index: 1002;
 }
 
-#nav-icon3 span {
+.navbar .nav-burger span {
     display: block;
     position: absolute;
     height: 2px;
@@ -39,34 +41,34 @@
     transition: .25s ease-in-out;
 }
 
-#nav-icon3 span:nth-child(1) {
+.navbar .nav-burger span:nth-child(1) {
     top: 0px;
 }
 
-#nav-icon3 span:nth-child(2),
-#nav-icon3 span:nth-child(3) {
+.navbar .nav-burger span:nth-child(2),
+.navbar .nav-burger span:nth-child(3) {
     top: 13px;
 }
 
-#nav-icon3 span:nth-child(4) {
+.navbar .nav-burger span:nth-child(4) {
     top: 26px;
 }
 
-#nav-icon3.open span:nth-child(1) {
+.navbar .nav-burger.open span:nth-child(1) {
     top: 13px;
     width: 0%;
     left: 50%;
 }
 
-#nav-icon3.open span:nth-child(2) {
+.navbar .nav-burger.open span:nth-child(2) {
     transform: rotate(45deg);
 }
 
-#nav-icon3.open span:nth-child(3) {
+.navbar .nav-burger.open span:nth-child(3) {
     transform: rotate(-45deg);
 }
 
-#nav-icon3.open span:nth-child(4) {
+.navbar .nav-burger.open span:nth-child(4) {
     top: 13px;
     width: 0%;
     left: 50%;
@@ -140,14 +142,14 @@
 @media only screen and (min-width: 1440px) {
 
     .navbar {
-        padding: 0 20px;
+        padding: 1rem 20%;
     }
 
     menu {
         display: none;
     }
 
-    #nav-icon3 {
+    .navbar .nav-burger {
         display: none;
     }
 
