--- a/public/css/form/form.css
+++ b/public/css/form/form.css
@@ -1,8 +1,34 @@
 
 form {
-
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
 
+.form-container {
+    margin: 0 15%;
+}
+
+.form-page {
+    margin-top: 4rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.form-page form {
+    width: 100%;
+}
+
+.form-page h1 {
+    margin-bottom: 2rem;
+}
+
+.form-page .form-inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: .4rem;
 }
