--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,6 +77,10 @@ a {
     padding: 2rem 20%;
 }
 
+.heightTop{
+    height: 56px;
+}
+
 @media only screen and (max-width: 728px) {
     .main-container {
         padding: 0 20px;
