--- a/public/css/form/button.css
+++ b/public/css/form/button.css
@@ -131,3 +131,13 @@ Default size is medium.
 .button.icon-right {
     padding-right: 1rem;
 }
+
+/* Reset button */
+button {
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+}
