--- a/public/css/form/form.css
+++ b/public/css/form/form.css
@@ -1,15 +1,14 @@
 
-form {
+/* General form style */
+.form form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.form-container {
-    margin: 0 15%;
-}
-
+/* A page which only contains a form */
 .form-page {
+    margin: 0 15%;
     margin-top: 4rem;
 
     display: flex;
@@ -31,4 +30,22 @@ form {
     display: flex;
     flex-direction: column;
     gap: .4rem;
+}
+
+/* Helper text */
+.helper {
+    font-size: var(--typescale-d1);
+    color: rgb(var(--color-gray-4));
+}
+
+/* Custom style */
+.price-bubble {
+    height: fit-content;
+    padding: .5rem 1rem;
+
+    background: rgba(var(--color-purple-primary), .1);
+    border-radius: var(--radius-rounded);
+
+    font-size: var(--typescale-u1);
+    color: rgb(var(--color-gray-4));
 }
