--- a/public/css/form/section-header.css
+++ b/public/css/form/section-header.css
@@ -1,12 +1,12 @@
-.sectionHeader
+.section-header
 {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    padding-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
     width: 100%;
     display: flex;
     border-bottom: 1px solid rgb(var(--color-gray-2));
-    font-size: var(--typescale-u2);
+    font-size: var(--typescale-u1);
 }
 
   
