--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@
 @import "parts/tabs.css";
 @import "parts/link.css";
 @import "parts/table.css";
+@import "parts/image-upload.css";
 
 @import "form/form.css";
 @import "form/button.css";
