--- a/public/css/form/button.css
+++ b/public/css/form/button.css
@@ -48,7 +48,7 @@ Default size is medium.
     gap: 1rem;
 
     cursor: pointer;
-    transition: color .2s, background .2s, border .2s, box-shadow .2s;
+    transition: color .2s, background .1s, border .2s, box-shadow .2s;
 }
 
 .button:hover {
@@ -130,6 +130,23 @@ Default size is medium.
 
 .button.icon-right {
     padding-right: 1rem;
+}
+
+.button.no-border {
+    border: none;
+}
+
+.button:disabled,
+.button[aria-disabled] {
+    background: rgb(var(--color-white));
+    color: rgb(var(--color-gray-3));
+    cursor: not-allowed;
+    border: 1px solid rgb(var(--color-gray-2));
+}
+
+.button:disabled.no-border,
+.button[aria-disabled].no-border {
+    border: none;
 }
 
 /* Reset button */
