--- a/public/css/form/sectionHeader.css
+++ b/public/css/form/sectionHeader.css
@@ -1,4 +1,14 @@
-.section-header
+/*
+
+    Nothing complicated here. It corresponds to the section Header
+    on the figma
+
+    It was made by yann so please consult him if you have any questions 
+    regarding its creation.
+
+*/
+
+.sectionHeader
 {
     margin-bottom: 20px;
     padding-bottom: 10px;
