--- a/public/css/parts/link.css
+++ b/public/css/parts/link.css
@@ -5,7 +5,7 @@
     display: inline-block;
     color: var(--color);
     position: relative;
-    padding-bottom: .2rem;
+    /*padding-bottom: .2rem;*/
 }
 
 .link::before {
@@ -13,7 +13,7 @@
     display: block;
     width: 100%;
     height: 1px;
-    bottom: 0;
+    bottom: -3px;
     position: absolute;
 
     background: var(--color);
@@ -33,5 +33,21 @@
 
 .link.small {
     font-size: var(--typescale-d1);
-    margin-bottom: .1rem;
+}
+
+.link.small::before {
+    bottom: -2px;
+}
+
+/* Simple link */
+.link.simple {
+    --color: rgb(var(--color-black));
+}
+
+.link.simple:hover {
+    --color: rgb(var(--color-gray-3));
+}
+
+.link.simple::before {
+    content: none;
 }
