--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,7 @@
 @import "parts/link.css";
 @import "parts/table.css";
 @import "parts/image-upload.css";
+@import "parts/badge.css";
 
 @import "form/form.css";
 @import "form/button.css";
