--- a/public/css/pages/dashboardOffers.css
+++ b/public/css/pages/dashboardOffers.css
@@ -1,5 +1,3 @@
-/*Main container*/
-
 .mainContainer{
     display: flex;
     justify-content: space-between;
@@ -63,3 +61,7 @@ h1 {
 }
 
 
+
+.offer-card {
+
+}
