--- a/html/css/parts/alert.css
+++ b/html/css/parts/alert.css
@@ -21,11 +21,24 @@
         transform: translateY(0);
         opacity: 1;
     }
-    99% {
+    80% {
         transform: translateY(-1rem);
         opacity: 0;
+        min-height: auto;
+        padding: 1rem 2rem;
+        margin-bottom: 2rem;
+    }
+    99% {
+        opacity: 0;
+        min-height: 0;
+        padding: 0 2rem;
+        margin: 0;
     }
     100% {
         display: none;
+        opacity: 0;
+        min-height: 0;
+        padding: 0 2rem;
+        margin: 0;
     }
 }
