--- a/html/css/pages/detailedOffer.css
+++ b/html/css/pages/detailedOffer.css
@@ -4,13 +4,31 @@
     flex-wrap: wrap;
     align-items: center;
     gap: 20px;
+    margin: 5px;
 }
 
 .inlineOffer {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 5px;
+}
+.inlineOfferTop {
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.containerAcordeon {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
     gap: 5px;
 }
 
@@ -48,4 +66,14 @@ x-acordeon {
 
 .author{
     text-decoration: underline;
+}
+
+.closed {
+    color: red;
+}
+.closing-soon {
+    color: orange;
+}
+.open {
+    color: green;
 }
