--- a/html/css/form/form.css
+++ b/html/css/form/form.css
@@ -38,6 +38,14 @@
     color: rgb(var(--color-gray-4));
 }
 
+/* Field errors */
+.field-error {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    color: rgb(var(--color-danger));
+    font-weight: 500;
+}
+
 /* Custom style */
 .price-bubble {
     height: fit-content;
