--- a/html/css/parts/loader.css
+++ b/html/css/parts/loader.css
@@ -2,15 +2,17 @@
 .loader {
     width: 100%;
     height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
-    z-index: 10000;
+    z-index: 100000;
 
     background: white;
-    position: fixed;
 }
 
 .loader svg {
