--- a/html/css/variables.css
+++ b/html/css/variables.css
@@ -8,6 +8,7 @@
     --color-orange-secondary: 255, 193, 78;
     --color-orange-tertiary: 255, 215, 132;
     --color-purple-primary: 201, 51, 231;
+    /*--color-purple-primary: 125, 102, 255;*/
     --color-purple-light: 250, 235, 253;
     --color-footer: 255, 216, 132;
 
