--- a/html/css/pages/offers/detail.css
+++ b/html/css/pages/offers/detail.css
@@ -7,12 +7,12 @@
     margin: 5px; /* Margin around the container */
 }
 
-.inlineOffer {
+.inline-offer {
     display: flex; /*Use flex to display in row*/
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    gap: 5px; /* Space between items */
+    gap: .5rem; /* Space between items */
 }
 
 .inlineOfferTop {
@@ -63,6 +63,9 @@ x-acordeon {
     flex-wrap: wrap;
     gap: 5px; /* Space between items */
     justify-content: flex-end; /* Align items to the end of the container */
+    color: rgb(var(--color-gray-4));
+    background: white;
+    padding: .5rem;
 }
 
 .author {
@@ -78,3 +81,49 @@ x-acordeon {
 .offer-open {
     color: green;
 }
+
+/* Header */
+.page-header {
+    width: 100%;
+    padding: 1rem 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    position: sticky;
+    overflow: hidden;
+    top: var(--navbar-height);
+
+    display: flex;
+    flex-direction: column;
+
+    background: white;
+    border: 1px solid rgb(var(--color-gray-1));
+    border-radius: var(--radius-medium);
+    z-index: 1;
+}
+.page-header.touched {
+    border-radius: 0 0 var(--radius-medium) var(--radius-medium);
+}
+.page-header p {
+    margin-top: .25rem;
+    margin-bottom: .25rem;
+}
+
+/* Map */
+.map-container {
+    display: flex;
+    flex-direction: column;
+    border-radius: var(--radius-medium);
+    overflow: hidden;
+    border: 1px solid rgb(var(--color-gray-1));
+}
+
+.map-container .map {
+    height: 250px;
+}
+
+.map-container .button {
+    border-radius: 0;
+    border: 0;
+    border-top: 1px solid rgb(var(--color-gray-1));
+}
+
