--- a/html/css/form/form.css
+++ b/html/css/form/form.css
@@ -9,12 +9,13 @@
 /* A page which only contains a form */
 .form-page {
     margin: 0 15%;
-    margin-top: 4rem;
+    margin-top: 8rem;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .form-page form {
@@ -23,6 +24,30 @@
 
 .form-page h1 {
     margin-bottom: 2rem;
+}
+
+.h-auth{
+    display : flex;
+    flex-direction: column;
+}
+
+.q-auth{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.25rem;
+    margin-top: -20px;
+}
+
+.form-w{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    width: 100%;
+    gap: 1.25rem;
 }
 
 .form-page .form-inputs {
